--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,308 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Noto Sans TC", sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
+
+header {
+  margin: 30px;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  border-bottom: 1px #bdbcbc solid;
+}
+
+header .logo {
+  width: 55px;
+  height: 54px;
+  cursor: pointer;
+}
+
+header .sitename {
+  font-size: 22px;
+  line-height: 26px;
+  text-align: right;
+  margin-right: auto;
+}
+
+header .navbar li {
+  font-size: 23px;
+  list-style-type: none;
+  display: inline-block;
+  margin-left: auto;
+  padding-right: 30px;
+}
+
+header .navbar li a {
+  text-decoration: none;
+  color: #000;
+}
+
+header .navbar li a:hover {
+  color: #9d2424;
+}
+
+main {
+  margin: 10px;
+  padding: 10px;
+}
+
+.bigpic_container {
+  margin-left: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.bigpic_container .Bigpic img {
+  width: 598px;
+  height: 398px;
+}
+
+.bigpic_container .main_info {
+  display: inline-block;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 10px;
+  padding: 25px;
+  text-align: center;
+  background-color: #ededed;
+}
+
+.bigpic_container .main_info h2 {
+  font-size: 30px;
+  background-color: #ededed;
+  line-height: 50px;
+}
+
+.bigpic_container .main_info p {
+  font-size: 18px;
+  line-height: 60px;
+  background-color: #ededed;
+}
+
+.bigpic_container .main_info .button {
+  margin-top: 30px;
+}
+
+.bigpic_container .main_info .read_it_more {
+  margin-top: 15px;
+  padding: 5px;
+  width: 200px;
+  height: 40px;
+  font-size: 23px;
+  background-color: #A02828;
+  color: white;
+  border: #A02828;
+  border-radius: 13px;
+  text-decoration: underline;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  cursor: pointer;
+}
+
+.container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto auto auto;
+      grid-template-columns: auto auto auto auto;
+  -webkit-column-gap: 70px;
+          column-gap: 70px;
+  row-gap: 20px;
+  margin: 40px 10px;
+  margin-bottom: 10px;
+  padding: 20px;
+  text-align: center;
+  background-color: #ededed;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.container .picture p {
+  word-wrap: break-word;
+}
+
+.container .item {
+  position: relative;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+
+.container .item .title {
+  position: absolute;
+  bottom: 8px;
+  left: 70px;
+  right: 70px;
+  cursor: pointer;
+}
+
+footer {
+  padding: 10px;
+  border-top: 1px #bdbcbc solid;
+}
+
+footer h3 {
+  text-align: center;
+  margin-top: 15px;
+  font-size: 25px;
+}
+
+footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer div a {
+  margin: 10px 70px;
+}
+
+@media screen and (max-width: 667px) {
+  header .navbar ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  header .navbar ul li {
+    font-size: 22px;
+  }
+  .bigpic_container {
+    margin: 0;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .bigpic_container .Bigpic img {
+    width: 100%;
+    height: 275px;
+  }
+  .bigpic_container .main_info {
+    margin: 0;
+  }
+  .bigpic_container .main_info h2 {
+    font-size: 20px;
+  }
+  .bigpic_container .main_info p {
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .picture {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 668px) and (max-width: 1023px) {
+  main {
+    margin: 20px;
+    padding: 0;
+  }
+  .bigpic_container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+  }
+  .bigpic_container .Bigpic img {
+    width: 100%;
+    height: auto;
+  }
+  .bigpic_container .main_info {
+    padding-top: 20px;
+    margin: 20px 0;
+    width: 100%;
+    height: auto;
+  }
+  .container {
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    margin: 40px 10px;
+    padding: 30px 0px;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+    background-color: #ededed;
+    -webkit-column-gap: 0px;
+            column-gap: 0px;
+  }
+  .container .picture {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container p {
+    width: 222px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .bigpic_container .main_info {
+    height: 400px;
+  }
+  .bigpic_container .main_info p {
+    line-height: 30px;
+  }
+  .container {
+    -webkit-column-gap: 10px;
+            column-gap: 10px;
+  }
+  .container .picture {
+    width: auto;
+  }
+}
+/*# sourceMappingURL=style.css.map */
