--- a/code/style.scss
+++ b/code/style.scss
@@ -53,6 +53,7 @@ main{
 .bigpic_container{
     margin-left:10px;
     display: flex;
+    flex-direction: row;
    
     .Bigpic img{
         width:598px;
@@ -61,21 +62,22 @@ main{
     .main_info{
         display: inline-block;
         align-items: center;
+        width:70%;
         margin: 0 10px;
         padding:25px;
         text-align: center;
         background-color:#ededed;
+        
         h2{
             font-size:30px;
-            background-color:#ededed; 
             line-height:50px;
         }
         p{
             font-size: 18px;
             line-height:60px ;
-            background-color:#ededed;
+            
         }
-        .button{
+        button{
             margin-top: 30px;
         }
         .read_it_more{
@@ -159,30 +161,32 @@ footer{
         }
     }
 
-   .bigpic_container{
-    margin:0;
-    padding:0;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-        .Bigpic img{
-            width:100%;
-            height:275px;
-        }
-        .main_info{
-            margin:0;
-            h2{
-                font-size: 20px;
+    .bigpic_container{
+        margin:0;
+        padding:0;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+            .Bigpic img{
+                width:100%;
+                height:275px;
             }
-            p{
-                font-size: 16px;
-                line-height: 18px;
+            .main_info{
+                width: 100%;
+                margin:0;
+                h2{
+                    font-size: 20px;
+                }
+                p{
+                    font-size: 16px;
+                    line-height: 18px;
+                }
             }
-        }
-   }
+       }
    .container{
        display:flex;
        flex-direction: column;
+       width: 100%;
        .picture {
          display: flex;
          flex-direction: row;
@@ -194,7 +198,11 @@ footer{
 }
 
 @media screen and (min-width:668px) and (max-width:1024px){
- 
+ header{
+    .navbar a{
+        font-size: 20px;
+    }
+ }
  main{
     margin:20px;
     padding:0;
@@ -235,18 +243,18 @@ footer{
        }
     }   
 
-@media screen and (min-width:1025px) {
-     .bigpic_container  .main_info{
-        height:400px;
-        p{
-            line-height: 30px;
+@media screen and (min-width:1024px) {
+    .bigpic_container{
+        .Bigpic img{
+            width:100%;
         }
-     }
+        
+    }
+    
      .container{
         column-gap: 10px;
         .picture{
            width: auto;
         }
      }
-    
-}
+}  
