--- a/code/style.css
+++ b/code/style.css
@@ -4,7 +4,8 @@ html {
 }
 
 h1 {
-  color: antiquewhite font-family: Optima, sans-serif;
+  color: white;
+  font-family: Optima, sans-serif;
 }
 
 h2 {
@@ -23,7 +24,7 @@ header {
   display: flex;
   align-items: center;
   background-color: white;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   padding: 2%;
 }
 
@@ -31,8 +32,6 @@ header {
   width: 100%;
   border-radius: 70%;
 }
-
-
 
 nav ul {
   display: flex;
@@ -56,7 +55,7 @@ nav ul li a {
   }
 
   h1 {
-    color: black;
+    color: darksalmon;
     font-size: 45px;
   }
 
@@ -72,7 +71,7 @@ nav ul li a {
   }
 
   h1 {
-    color: black;
+    color: darksalmon;
     font-size: 60px;
   }
 
@@ -84,17 +83,17 @@ nav ul li a {
 .big-news {
   display: grid;
   grid-template-columns: 1fr;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .big-news-image {
-  background-color: white;
-  padding: 2%;
+  background-color: lightsalmon;
+  padding: 4%;
 }
 
 .big-news-textbox {
-  background-color: white;
-  padding: 2%;
+  background-color: lightsalmon;
+  padding: 4%;
 }
 
 @media (min-width: 667px) and (max-width: 1024px) {
@@ -140,7 +139,7 @@ nav ul li a {
 
 .grid-item {
   background-color: white;
-  padding: 4%;
+  padding: 8%;
 }
 
 .photo {
