--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ html {background-color: pink;
     display: grid;
     padding: 40px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(10, 400px);
+    grid-template-rows: repeat(1, 400px);
     gap: 10px;
     color:palevioletred;
   }
@@ -117,6 +117,13 @@ html {background-color: pink;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: pink;
   }
+  .footer {
+    text-align: center;
+    padding: 3px;
+    background-color: pink;
+    color: rgb(206, 66, 112);
+  }
+
   @media (min-width: 667px) and (max-width: 1024px) {
     body {
       flex-direction: column;  
