--- a/code/style.css
+++ b/code/style.css
@@ -210,8 +210,12 @@ main {
 }
 
 .news-heading {
+  padding-left: 50px;
+  font-size: 30px;
+  margin-bottom: 100px;
   border-top: #000 20px double;
 }
+
 .grid {
   width: fit-content;
   margin: 0 auto;
@@ -227,21 +231,27 @@ main {
   );
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  column-gap: 30px;
-  row-gap: 60px;
+  column-gap: 50px;
+  row-gap: 50px;
   padding: 100px 60px;
 }
 
 .grid-child {
-  width: 240px;
+  width: 256px;
+  height: calc(100% + 20px);
   background: #fff;
   overflow: hidden;
   transition: all ease-in-out 0.3s;
+  border-top: 10px solid rgba(0, 247, 255);
 }
 
 .grid-child:hover {
-  border-top: 2px solid rgba(0, 255, 10);
-  border-bottom: 2px solid rgba(250, 13, 175);
+  outline: 6px solid rgba(250, 13, 175);
+}
+
+.grid-child h2 {
+  font-size: 18px;
+  padding: 10px 30px;
 }
 
 .grid-child img {
@@ -257,14 +267,8 @@ main {
   overflow: hidden;
 }
 
-.grid-child img:hover {
+.grid-child:hover img {
   transform: scale(110%);
-}
-
-.grid-child h2 {
-  display: block;
-  font-size: 20px;
-  margin: 10px 18px;
 }
 
 .grid-child a {
@@ -504,5 +508,148 @@ footer {
 
   to {
     opacity: 1;
+  }
+}
+
+/* Text moving animation */
+:root {
+  --duration: 6s;
+  --size: 100vw;
+  --characters: 14;
+  --delay-character: 0.2s;
+  --font-size: 30px;
+}
+
+.frame {
+  width: fit-content;
+  height: fit-content;
+  max-width: fit-content;
+  max-height: fit-content;
+  margin: 0 auto;
+  position: relative;
+  transition: ease all 0.4s;
+  overflow: hidden;
+}
+/* 
+.frame .text {
+
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: ease all 0.4s;
+} */
+
+.frame span {
+  font-size: var(--font-size);
+  display: inline-block;
+  text-align: center;
+  width: var(--font-size);
+  -webkit-animation: frameMove var(--duration) linear infinite;
+  animation: frameMove var(--duration) linear infinite;
+  position: absolute;
+  transition: ease all 0.4s;
+}
+
+.frame span:nth-of-type(1) {
+  -webkit-animation-delay: calc(var(--delay-character) * 1);
+  animation-delay: calc(var(--delay-character) * 1);
+}
+.frame span:nth-of-type(2) {
+  -webkit-animation-delay: calc(var(--delay-character) * 2);
+  animation-delay: calc(var(--delay-character) * 2);
+}
+.frame span:nth-of-type(3) {
+  -webkit-animation-delay: calc(var(--delay-character) * 3);
+  animation-delay: calc(var(--delay-character) * 3);
+}
+.frame span:nth-of-type(4) {
+  -webkit-animation-delay: calc(var(--delay-character) * 4);
+  animation-delay: calc(var(--delay-character) * 4);
+}
+.frame span:nth-of-type(5) {
+  -webkit-animation-delay: calc(var(--delay-character) * 5);
+  animation-delay: calc(var(--delay-character) * 5);
+}
+.frame span:nth-of-type(6) {
+  -webkit-animation-delay: calc(var(--delay-character) * 6);
+  animation-delay: calc(var(--delay-character) * 6);
+}
+.frame span:nth-of-type(7) {
+  -webkit-animation-delay: calc(var(--delay-character) * 7);
+  animation-delay: calc(var(--delay-character) * 7);
+}
+.frame span:nth-of-type(8) {
+  -webkit-animation-delay: calc(var(--delay-character) * 8);
+  animation-delay: calc(var(--delay-character) * 8);
+}
+.frame span:nth-of-type(9) {
+  -webkit-animation-delay: calc(var(--delay-character) * 9);
+  animation-delay: calc(var(--delay-character) * 9);
+}
+.frame span:nth-of-type(10) {
+  -webkit-animation-delay: calc(var(--delay-character) * 10);
+  animation-delay: calc(var(--delay-character) * 10);
+}
+.frame span:nth-of-type(11) {
+  -webkit-animation-delay: calc(var(--delay-character) * 11);
+  animation-delay: calc(var(--delay-character) * 11);
+}
+.frame span:nth-of-type(12) {
+  -webkit-animation-delay: calc(var(--delay-character) * 12);
+  animation-delay: calc(var(--delay-character) * 12);
+}
+.frame span:nth-of-type(13) {
+  -webkit-animation-delay: calc(var(--delay-character) * 13);
+  animation-delay: calc(var(--delay-character) * 13);
+}
+.frame span:nth-of-type(14) {
+  -webkit-animation-delay: calc(var(--delay-character) * 14);
+  animation-delay: calc(var(--delay-character) * 14);
+}
+.frame span:nth-of-type(15) {
+  -webkit-animation-delay: calc(var(--delay-character) * 15);
+  animation-delay: calc(var(--delay-character) * 15);
+}
+.frame span:nth-of-type(16) {
+  -webkit-animation-delay: calc(var(--delay-character) * 16);
+  animation-delay: calc(var(--delay-character) * 16);
+}
+.frame span:nth-of-type(17) {
+  -webkit-animation-delay: calc(var(--delay-character) * 17);
+  animation-delay: calc(var(--delay-character) * 17);
+}
+.frame span:nth-of-type(18) {
+  -webkit-animation-delay: calc(var(--delay-character) * 18);
+  animation-delay: calc(var(--delay-character) * 18);
+}
+.frame span:nth-of-type(19) {
+  -webkit-animation-delay: calc(var(--delay-character) * 19);
+  animation-delay: calc(var(--delay-character) * 19);
+}
+.frame span:nth-of-type(20) {
+  -webkit-animation-delay: calc(var(--delay-character) * 20);
+  animation-delay: calc(var(--delay-character) * 20);
+}
+.frame span:nth-of-type(21) {
+  -webkit-animation-delay: calc(var(--delay-character) * 21);
+  animation-delay: calc(var(--delay-character) * 21);
+}
+.frame span:nth-of-type(22) {
+  -webkit-animation-delay: calc(var(--delay-character) * 22);
+  animation-delay: calc(var(--delay-character) * 22);
+}
+.frame span:nth-of-type(23) {
+  -webkit-animation-delay: calc(var(--delay-character) * 23);
+  animation-delay: calc(var(--delay-character) * 23);
+}
+
+@keyframes frameMove {
+  0% {
+    top: 0;
+    right: 0;
+  }
+  100% {
+    top: 0;
+    right: 120%;
   }
 }
