--- a/code/style.css
+++ b/code/style.css
@@ -530,14 +530,6 @@ footer {
   transition: ease all 0.4s;
   overflow: hidden;
 }
-/* 
-.frame .text {
-
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: ease all 0.4s;
-} */
 
 .frame span {
   font-size: var(--font-size);
@@ -661,10 +653,6 @@ footer {
     padding: 70px 40px;
   }
 
-  .news-heading {
-    padding-left: 30px;
-  }
-
   .about-container {
     margin: 150px auto 80px;
   }
@@ -713,5 +701,123 @@ footer {
 @media (max-width: 910px) {
   .grid {
     grid-template-columns: repeat(2, 1fr);
+    padding: 70px 20px;
+    gap: 20px;
+  }
+
+  .grid-child {
+    height: 100%;
+  }
+
+  .news-heading {
+    text-align: center;
+    padding: 0;
+  }
+
+  .sign,
+  .fast-flicker,
+  .flicker {
+    letter-spacing: 2;
+    font-size: 70px;
+  }
+
+  .sign-second {
+    right: -120px;
+    bottom: 0;
+    font-size: 4 0px;
+  }
+
+  .about-inner {
+    max-width: 300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .inner-left {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    height: 500px;
+  }
+
+  .inner-right {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    height: 400px;
+  }
+
+  .berlin-wall-img {
+    width: 120%;
+    margin: 0;
+  }
+
+  .inner-right img {
+    width: 120%;
+  }
+
+  .about-second-box a {
+    width: fit-content;
+    top: 360px;
+    left: 100px;
+    transform: rotate(-12deg);
+  }
+
+  .about-first-box a {
+    position: absolute;
+    top: 300px;
+    padding: 30px;
+    border-radius: 50%;
+    border: dotted 10px rgba(250, 13, 115);
+  }
+
+  .about-first-box .about-text {
+    padding-bottom: 30px;
+  }
+
+  .about-text {
+    padding: 10px 10px;
+  }
+
+  .about-first-box h2,
+  .about-second-box h2 {
+    transform: rotate(0);
+    position: unset;
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+
+  .about-container h3 {
+    display: none;
+  }
+
+  .about-container {
+    width: 300px;
+  }
+
+  .sign-second {
+    font-size: 40px;
+    bottom: -200px;
+  }
+}
+
+@media (max-width: 660px) {
+  .about-container {
+    margin: 80px auto;
+  }
+
+  .about-container h2 {
+    text-align: center;
+    border: dotted 4px #000;
+  }
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 70px 40px;
+    gap: 40px;
+  }
+
+  .grid-child {
+    height: 100%;
+  }
+
+  .sign-second {
+    display: none;
   }
 }
